# litevloc_code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  environment.yaml  package.xml  requirements.txt  test_torch_install.py
doc/: instruction_map_free_benchmark.md  instruction_vloc_data.md  instruction_vnav_real_robot.md  instruction_vnav_simu_matterport3d.md
docs/: instruction_data_collection.md  instruction_map_free_benchmark.md  instruction_vloc_data.md  instruction_vnav_real_robot.md  instruction_vnav_simu_matterport3d.md
launch/: run_depth_reg.launch  run_navigation_interface_simuenv.launch  run_pose_fusion.launch  run_vloc.launch  run_vloc_anymal.launch  run_vloc_matterport3d.launch  run_vloc_matterport3d_env.launch  run_vloc_matterport3d_rosbag.launch  run_vloc_offline_files.launch  run_vloc_online_anymal.launch  run_vloc_online_simuenv.launch
python/: camera_keyframe_select.py  data_generator.py  depth_registration.py  extract_vpr_descriptors.py  global_planner.py  image_graph.py  image_node.py  image_obs.py  loc_pipeline.py  point_graph.py  point_node.py  pose3slam_g2o.py  pose_fusion.py  ros_global_planner.py  ros_loc_pipeline.py  ros_loc_pipeline_simu.py  ros_pose_fusion.py  ros_publish_goal_image.py  ros_publish_graph.py  ros_vis_map.py  run_vloc_offline_rerun.py  select_keyframe_greedy.py  topological_graph.py
rviz_cfg/: depth_registration.rviz  depth_registration_matterport3d.rviz  topo_graph.rviz  topo_graph_anymal.rviz  topo_graph_anymal_camera_frame.rviz  topo_graph_anymal_paper.rviz  topo_graph_matterport3d.rviz  topo_graph_video.rviz  (+1 more)
(+123 files in other folders)
